--- a/architecture proposal.asciidoc
+++ b/architecture proposal.asciidoc
@@ -651,6 +651,8 @@ The table editor provides a primitive command set to examine and set the propert
 
 Complex commands can be built out of simpler commands.
 
+# Conclusion
+
 In summary, this riffs on the _simple_ 1980s-style architecture
 of Emacs and proposes that all the font magic should be 
 conceived of as two things:   1. Extension package commands atop
@@ -661,9 +663,3 @@ In the above account leading to milestone 1 the account given of
 commands is incomplete, the protocol between editor and UI is missing.
 I will fill these in over the next several days but I needed to 
 put up a good starting point for discussion.
-
-(Hypothesis: a leading but distinctly incomplete document is a good starting point for discussion :-)
-
-The formatting is obviously a mess.  It's what happens when you
-throw plain-text formatted for "outline-mode" into markdown.  Could
-be worse.  I'll fix that too, as I go along.  
